// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter Lists Table renders with filter lists and selection supplied 1`] = `
<div
  data-test-subj="mlFilterListTableContainer"
>
  <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-m-flexStart-center-row"
    >
      <div
        class="euiFlexItem euiSearchBar__searchHolder emotion-euiFlexItem-grow-1-euiSearchBar__searchHolder"
      >
        <div
          class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
            style="--euiFormControlLeftIconsCount: 1;"
          >
            <div
              class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
            >
              <span
                class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
            <input
              aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
              class="euiFieldSearch emotion-euiFieldSearch-fullWidth"
              placeholder="Search..."
              type="search"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiSearchBar__filtersHolder emotion-euiFlexItem-growZero-euiSearchBar__filtersHolder"
      >
        <div
          class="euiFilterGroup emotion-euiFilterGroup-uncompressed"
        />
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
          data-test-subj="mlFilterListsButtonCreate"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            New
          </span>
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div>
          <button
            class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-danger"
            data-test-subj="mlFilterListsDeleteButton"
            type="button"
          >
            <span
              class="emotion-euiButtonDisplayContent"
            >
              <span
                color="inherit"
                data-euiicon-type="trash"
              />
              Delete
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
    />
    <div
      class="euiBasicTable ml-filter-lists-table"
      data-test-subj="mlFilterListsTable"
    >
      <table
        class="euiTable emotion-euiTable-fixed-uncompressed-desktop"
        id="__table_generated-id"
        tabindex="-1"
      >
        <caption
          class="euiTableCaption emotion-euiTableCaptionStyles-euiScreenReaderOnly"
        />
        <thead>
          <tr>
            <th
              class="euiTableHeaderCellCheckbox emotion-euiTableHeaderCellCheckbox"
              scope="col"
            >
              <div
                class="euiTableCellContent"
              >
                <div
                  class="euiCheckbox emotion-euiCheckbox"
                >
                  <div
                    class="euiCheckbox__square emotion-euiCheckbox__square-unselected"
                  >
                    <span
                      class="emotion-euiCheckbox__icon-check"
                      data-euiicon-type="empty"
                    />
                    <input
                      aria-label="Select all rows"
                      class="euiCheckbox__input emotion-euiCheckbox__input"
                      data-test-subj="checkboxSelectAll"
                      id="_selection_column-checkbox_generated-id"
                      title="Select all rows"
                      type="checkbox"
                    />
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-sort="ascending"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_filter_id_0"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
              >
                <button
                  class="euiTableHeaderButton euiTableHeaderButton-isSorted emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="ID"
                    >
                      ID
                    </span>
                    <span
                      class="euiTableSortIcon"
                      data-euiicon-type="sortUp"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_description_1"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Description"
                    >
                      Description
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_item_count_2"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Item count"
                    >
                      Item count
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_used_by_3"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="In use"
                    >
                      In use
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="css-0"
        >
          <tr
            class="euiTableRow emotion-euiTableRow-desktop"
            data-test-subj="mlFilterListRow row-safe_domains"
          >
            <td
              class="euiTableRowCellCheckbox emotion-euiTableRowCellCheckbox-desktop"
            >
              <div
                class="euiTableCellContent"
              >
                <div
                  class="euiCheckbox emotion-euiCheckbox"
                >
                  <div
                    class="euiCheckbox__square emotion-euiCheckbox__square-disabled-unselected"
                  >
                    <span
                      class="emotion-euiCheckbox__icon-check"
                      data-euiicon-type="empty"
                    />
                    <input
                      aria-label="Select row 1"
                      class="euiCheckbox__input emotion-euiCheckbox__input"
                      data-test-subj="checkboxSelectRow-safe_domains"
                      disabled=""
                      id="__table_generated-id_selection_column_safe_domains-checkbox"
                      title="Select row 1"
                      type="checkbox"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnId"
              scope="row"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <a
                  href="/settings/filter_lists/edit_filter_list/safe_domains"
                >
                  safe_domains
                </a>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnDescription"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  List of known safe domains
                </span>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnItemCount"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  500
                </span>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnInUse"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  data-euiicon-type="check"
                  data-test-subj="mlFilterListUsedByIcon inUse"
                >
                  In use
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="euiTableRow euiTableRow-isSelectable emotion-euiTableRow-desktop"
            data-test-subj="mlFilterListRow row-us_east_instances"
          >
            <td
              class="euiTableRowCellCheckbox emotion-euiTableRowCellCheckbox-desktop"
            >
              <div
                class="euiTableCellContent"
              >
                <div
                  class="euiCheckbox emotion-euiCheckbox"
                >
                  <div
                    class="euiCheckbox__square emotion-euiCheckbox__square-unselected"
                  >
                    <span
                      class="emotion-euiCheckbox__icon-check"
                      data-euiicon-type="empty"
                    />
                    <input
                      aria-label="Select row 2"
                      class="euiCheckbox__input emotion-euiCheckbox__input"
                      data-test-subj="checkboxSelectRow-us_east_instances"
                      id="__table_generated-id_selection_column_us_east_instances-checkbox"
                      title="Select row 2"
                      type="checkbox"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnId"
              scope="row"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <a
                  href="/settings/filter_lists/edit_filter_list/us_east_instances"
                >
                  us_east_instances
                </a>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnDescription"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  US East AWS instances
                </span>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnItemCount"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  20
                </span>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnInUse"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  data-euiicon-type="cross"
                  data-test-subj="mlFilterListUsedByIcon notInUse"
                >
                  Not in use
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <div>
        <div
          class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
        />
        <div
          class="euiFlexGroup eui-xScroll emotion-euiFlexGroup-wrap-s-spaceBetween-center-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiPopover emotion-euiPopover-inline-block"
            >
              <button
                class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-text"
                data-test-subj="tablePaginationPopoverButton"
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    Rows per page
                    : 
                    10
                  </span>
                  <span
                    color="inherit"
                    data-euiicon-type="arrowDown"
                  />
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <nav
              aria-label="Pagination for table: "
              class="euiPagination emotion-euiPagination"
            >
              <span
                aria-atomic="true"
                aria-relevant="additions text"
                class="emotion-euiScreenReaderOnly"
                role="status"
              >
                Page 1 of 1
              </span>
              <button
                aria-label="Previous page"
                class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
                data-test-subj="pagination-button-previous"
                disabled=""
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="arrowLeft"
                />
              </button>
              <ul
                class="euiPagination__list emotion-euiPagination__list"
              >
                <li
                  class="euiPagination__item"
                >
                  <button
                    aria-controls="__table_generated-id"
                    aria-current="page"
                    aria-label="Page 1 of 1"
                    class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
                    data-test-subj="pagination-button-0"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                    >
                      <span
                        class="eui-textTruncate euiButtonEmpty__text"
                      >
                        1
                      </span>
                    </span>
                  </button>
                </li>
              </ul>
              <button
                aria-label="Next page"
                class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
                data-test-subj="pagination-button-next"
                disabled=""
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="arrowRight"
                />
              </button>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filter Lists Table renders with filter lists supplied 1`] = `
<div
  data-test-subj="mlFilterListTableContainer"
>
  <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-m-flexStart-center-row"
    >
      <div
        class="euiFlexItem euiSearchBar__searchHolder emotion-euiFlexItem-grow-1-euiSearchBar__searchHolder"
      >
        <div
          class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
            style="--euiFormControlLeftIconsCount: 1;"
          >
            <div
              class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
            >
              <span
                class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
            <input
              aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
              class="euiFieldSearch emotion-euiFieldSearch-fullWidth"
              placeholder="Search..."
              type="search"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiSearchBar__filtersHolder emotion-euiFlexItem-growZero-euiSearchBar__filtersHolder"
      >
        <div
          class="euiFilterGroup emotion-euiFilterGroup-uncompressed"
        />
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
          data-test-subj="mlFilterListsButtonCreate"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            New
          </span>
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div>
          <button
            class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-base-disabled"
            data-test-subj="mlFilterListsDeleteButton"
            disabled=""
            type="button"
          >
            <span
              class="emotion-euiButtonDisplayContent"
            >
              <span
                color="inherit"
                data-euiicon-type="trash"
              />
              Delete
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
    />
    <div
      class="euiBasicTable ml-filter-lists-table"
      data-test-subj="mlFilterListsTable"
    >
      <table
        class="euiTable emotion-euiTable-fixed-uncompressed-desktop"
        id="__table_generated-id"
        tabindex="-1"
      >
        <caption
          class="euiTableCaption emotion-euiTableCaptionStyles-euiScreenReaderOnly"
        />
        <thead>
          <tr>
            <th
              class="euiTableHeaderCellCheckbox emotion-euiTableHeaderCellCheckbox"
              scope="col"
            >
              <div
                class="euiTableCellContent"
              >
                <div
                  class="euiCheckbox emotion-euiCheckbox"
                >
                  <div
                    class="euiCheckbox__square emotion-euiCheckbox__square-unselected"
                  >
                    <span
                      class="emotion-euiCheckbox__icon-check"
                      data-euiicon-type="empty"
                    />
                    <input
                      aria-label="Select all rows"
                      class="euiCheckbox__input emotion-euiCheckbox__input"
                      data-test-subj="checkboxSelectAll"
                      id="_selection_column-checkbox_generated-id"
                      title="Select all rows"
                      type="checkbox"
                    />
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-sort="ascending"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_filter_id_0"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
              >
                <button
                  class="euiTableHeaderButton euiTableHeaderButton-isSorted emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="ID"
                    >
                      ID
                    </span>
                    <span
                      class="euiTableSortIcon"
                      data-euiicon-type="sortUp"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_description_1"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Description"
                    >
                      Description
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_item_count_2"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Item count"
                    >
                      Item count
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_used_by_3"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="In use"
                    >
                      In use
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="css-0"
        >
          <tr
            class="euiTableRow emotion-euiTableRow-desktop"
            data-test-subj="mlFilterListRow row-safe_domains"
          >
            <td
              class="euiTableRowCellCheckbox emotion-euiTableRowCellCheckbox-desktop"
            >
              <div
                class="euiTableCellContent"
              >
                <div
                  class="euiCheckbox emotion-euiCheckbox"
                >
                  <div
                    class="euiCheckbox__square emotion-euiCheckbox__square-disabled-unselected"
                  >
                    <span
                      class="emotion-euiCheckbox__icon-check"
                      data-euiicon-type="empty"
                    />
                    <input
                      aria-label="Select row 1"
                      class="euiCheckbox__input emotion-euiCheckbox__input"
                      data-test-subj="checkboxSelectRow-safe_domains"
                      disabled=""
                      id="__table_generated-id_selection_column_safe_domains-checkbox"
                      title="Select row 1"
                      type="checkbox"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnId"
              scope="row"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <a
                  href="/settings/filter_lists/edit_filter_list/safe_domains"
                >
                  safe_domains
                </a>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnDescription"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  List of known safe domains
                </span>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnItemCount"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  500
                </span>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnInUse"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  data-euiicon-type="check"
                  data-test-subj="mlFilterListUsedByIcon inUse"
                >
                  In use
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="euiTableRow euiTableRow-isSelectable emotion-euiTableRow-desktop"
            data-test-subj="mlFilterListRow row-us_east_instances"
          >
            <td
              class="euiTableRowCellCheckbox emotion-euiTableRowCellCheckbox-desktop"
            >
              <div
                class="euiTableCellContent"
              >
                <div
                  class="euiCheckbox emotion-euiCheckbox"
                >
                  <div
                    class="euiCheckbox__square emotion-euiCheckbox__square-unselected"
                  >
                    <span
                      class="emotion-euiCheckbox__icon-check"
                      data-euiicon-type="empty"
                    />
                    <input
                      aria-label="Select row 2"
                      class="euiCheckbox__input emotion-euiCheckbox__input"
                      data-test-subj="checkboxSelectRow-us_east_instances"
                      id="__table_generated-id_selection_column_us_east_instances-checkbox"
                      title="Select row 2"
                      type="checkbox"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnId"
              scope="row"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <a
                  href="/settings/filter_lists/edit_filter_list/us_east_instances"
                >
                  us_east_instances
                </a>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnDescription"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  US East AWS instances
                </span>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnItemCount"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  20
                </span>
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              data-test-subj="mlFilterListColumnInUse"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  data-euiicon-type="cross"
                  data-test-subj="mlFilterListUsedByIcon notInUse"
                >
                  Not in use
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <div>
        <div
          class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
        />
        <div
          class="euiFlexGroup eui-xScroll emotion-euiFlexGroup-wrap-s-spaceBetween-center-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiPopover emotion-euiPopover-inline-block"
            >
              <button
                class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-text"
                data-test-subj="tablePaginationPopoverButton"
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    Rows per page
                    : 
                    10
                  </span>
                  <span
                    color="inherit"
                    data-euiicon-type="arrowDown"
                  />
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <nav
              aria-label="Pagination for table: "
              class="euiPagination emotion-euiPagination"
            >
              <span
                aria-atomic="true"
                aria-relevant="additions text"
                class="emotion-euiScreenReaderOnly"
                role="status"
              >
                Page 1 of 1
              </span>
              <button
                aria-label="Previous page"
                class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
                data-test-subj="pagination-button-previous"
                disabled=""
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="arrowLeft"
                />
              </button>
              <ul
                class="euiPagination__list emotion-euiPagination__list"
              >
                <li
                  class="euiPagination__item"
                >
                  <button
                    aria-controls="__table_generated-id"
                    aria-current="page"
                    aria-label="Page 1 of 1"
                    class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
                    data-test-subj="pagination-button-0"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                    >
                      <span
                        class="eui-textTruncate euiButtonEmpty__text"
                      >
                        1
                      </span>
                    </span>
                  </button>
                </li>
              </ul>
              <button
                aria-label="Next page"
                class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
                data-test-subj="pagination-button-next"
                disabled=""
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="arrowRight"
                />
              </button>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
